--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <div id="disp">
                     <div id="map" class="map"></div>
                 </div>
-             
+                <div id="wait1"></div>
+                <div id="wait2"></div>
                 <button class="button is-info mx-1" type="button" id="here">Search Here<i
                         class="fa fa-search ml-1"></i></button>
 
